# package_install_demo

./: .gitignore  README.md
external_packages/cpp/maths_pkg/: CMakeLists.txt
external_packages/cpp/maths_pkg/advanced/: CMakeLists.txt
external_packages/cpp/maths_pkg/advanced/src/: divide.cpp  multiply.cpp
external_packages/cpp/maths_pkg/basic/: CMakeLists.txt
external_packages/cpp/maths_pkg/basic/src/: add.cpp  sub.cpp
external_packages/python/: setup.py
external_packages/python/math_pkg/: __init__.py
implementation/cpp/: CMakeLists.txt
implementation/cpp/src/: test.cpp
implementation/python/: test.py
